# bumblebee

./: CMakeLists.txt  README.md  package.xml
launch/: joyCam.launch.py  rsp.launch.py  simBot.launch.py  spawner.launch.py
models/: model.config  model.sdf
models/meshes/: lds1.dae
params/: bridge.yaml
scripts/: ball_follow.py  circleDetect.py  detect_range.py  new.py  range_detector.py  try.py
urdf/: model.urdf
worlds/: empty_world.world
